<resources>
    <string name="multiplication_screen_title">Проверка таблицы умножения</string>
    <string name="test_result_sub_screen_title">Результат проверки:</string>
    <string name="right_answers_number_text">Правильных ответов - %1$s</string>
    <string name="wrong_answers_number_text">Неверных ответов - %1$s</string>
    <string name="test_assessment_text">Оценка - %1$s</string>
    <string name="no_test_assessment_pre_text">Оценка -  </string>
    <string name="total_test_time_text">Время выполнения теста - %1$s сек.</string>
    <string name="multiplication_screen_before_test_details_text">Чтобы начать тестирование на знание таблицы умножения нажмите кнопку СТАРТ. Пауза при тестировании не допускается, возможна только полная остановка проверки нажатием на кнопку СТОП.</string>
    <string name="start_multiplication_test_button_text">СТАРТ</string>
    <string name="back_button_text">НАЗАД</string>
    <string name="skip_test_button_text">СТОП</string>
    <string name="test_id_number_text">#%1$s</string>
    <string name="test_execution_date_text">Дата: %1$s</string>
    <string name="test_skipped_text">Прерван</string>
    <string name="examples_list_title">Задания:</string>
    <string name="example_item_text">%1$s)   %2$s * %3$s = %4$s (%5$s сек.)</string>
    <string name="examples_number_title_text">Количество примеров</string>
    <string name="task_time_title_text">Время выполнения примера, сек</string>
    <string name="assessment_from_error_number_title_text">Оценка при количестве ошибок</string>
    <string name="assessment_five_title_text">5</string>
    <string name="assessment_four_title_text">4</string>
    <string name="assessment_three_title_text">3</string>
    <string name="high_difficulty_test_title_text">Тест повышенной сложности</string>
    <string name="apply_settings_dialog_message_text">Применить настройки и выйти?</string>
</resources>