<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/test_result_fragment_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_standard_border_margin"
    tools:context=".presentation.view.TestResultFragment">

    <TextView
        android:id="@+id/multiplication_screen_title"
        style="@style/screen_title_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplication_screen_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/test_result_text_view"
        style="@style/screen_title_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_result_sub_screen_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplication_screen_title"
        android:layout_marginTop="@dimen/standard_space_between_views"/>

    <TextView
        android:id="@+id/right_answers_number_text_view"
        style="@style/right_answers_number_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/right_answers_number_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test_result_text_view"
        android:layout_marginTop="@dimen/small_space_between_views"/>

    <TextView
        android:id="@+id/wrong_answers_number_text_view"
        style="@style/wrong_answers_number_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/wrong_answers_number_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/right_answers_number_text_view"
        android:layout_marginTop="@dimen/small_space_between_views"/>

    <TextView
        android:id="@+id/result_assessment_title_text_view"
        style="@style/screen_sub_title_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_assessment_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrong_answers_number_text_view"
        android:layout_marginTop="@dimen/small_space_between_views"/>

    <TextView
        android:id="@+id/result_assessment_text_view"
        style="@style/screen_sub_title_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_space_between_views"
        app:layout_constraintBottom_toBottomOf="@+id/result_assessment_title_text_view"
        app:layout_constraintStart_toEndOf="@+id/result_assessment_title_text_view"
        app:layout_constraintTop_toTopOf="@+id/result_assessment_title_text_view"
        tools:text="4" />

</androidx.constraintlayout.widget.ConstraintLayout>