<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/multiplication_fragment_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_standard_side_padding"
    tools:context=".presentation.view.MultiplicationFragment">


    <TextView
        android:id="@+id/multiplication_screen_title"
        style="@style/screen_title_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplication_screen_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/multiplication_screen_details_text"
        style="@style/screen_details_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/multiplication_screen_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/standard_space_between_views"
        android:text="@string/multiplication_screen_before_test_details_text"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_space_between_views"
        android:text="@string/start_multiplication_test_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplication_screen_details_text" />

</androidx.constraintlayout.widget.ConstraintLayout>